# GoFEM_2D

./: README.md
GOFEM/applications/em_modeling/: CMakeLists.txt  gofem.cc  hello_message.h
GOFEM/common/: command_line.h  linear_algebra.cc  linear_algebra.h  sincos_transform.cc  sincos_transform.h  sparse_direct.cc  sparse_direct.h
GOFEM/functions/: current_function.cc  current_function.h  exact_solution.cc  exact_solution.h  exact_solution_dc.h  numerical_solution.cc  numerical_solution.h  secondary_source.cc  secondary_source.h  solution_function.h
GOFEM/io/: parameter_reader.cc  parameter_reader.h  read_data_map.cc  read_data_map.h  read_materials.h  read_model.h  read_xyz_model.cc  read_xyz_model.h
GOFEM/mesh_tools/: mesh_tools.h
GOFEM/modeling/EM/: block_solver.h  emfem.cc  emfem.h  forward_modeling_caller.cc  forward_modeling_caller.h  modelled_data.h
GOFEM/modeling/EM/2D/: csem25dfem.cc  csem25dfem.h  csem2dfem.cc  csem2dfem.h  em2dfem.cc  em2dfem.h  mt2dfem.cc  mt2dfem.h
GOFEM/modeling/EM/core/: assembly.cc  assembly.h  error_estimator.cc  error_estimator.h
GOFEM/physical_model/: cell_properties.cc  cell_properties.h  material.cc  material.h  physical_model.cc  physical_model.h  receiver_data.cc  receiver_data.h  source_name.h  spherical_model.cc  spherical_model.h  survey.cc  survey.h
shared/: common.cc  common.h
shared/analytical/: mt1d.cc  mt1d.h  mt1d_normalized.cc  mt1d_normalized.h
shared/io/: read_list.h  read_sources.cc  read_sources.h
shared/mpi/: auxiliary_functions.cc  auxiliary_functions.h  counter.cc  counter.h  makesub.cc  makesub.h  mpi_error.cc  mpi_error.h
shared/survey/: data.cc  data.h  datum.h  dipole_source.cc  dipole_source.h  external_source.h  physical_source.cc  physical_source.h  receiver.cc  receiver.h
